[package]
name = "_sha3"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
arboard = {version = "3.4.0", default-features = false}
sha3 = "0.10.8"
